<resources>
    <string name="app_name">Geo Quest - Visiter en s\'amusant !</string>
    <string name="game_finish">Partie terminée !</string>
    <string name="image_view_hint">Image associée à l\'indice</string>
    <string name="finish_beacon">Vous venez d\'atteindre cette balise ! Passez à la suite ;)</string>
    <string name="congrats">Félicitations</string>
    <string name="game_finish_dialog_button">Revenir au menu principal</string>
    <string name="launcher_start_button">Jouer</string>
    <string name="launcher_editor_button">Edition de parcours</string>
    <string name="quit">Revenir au menu principal</string>
    <string name="help">Aide</string>
    <string name="save_beacon">Enregistrer</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="caption_beacon_coordinates">Coordonées GPS de la balise :</string>
    <string name="beacon_hint_string">Indice</string>
    <string name="field_itinerary_name">Nom de l\'itinéraire</string>
    <string name="create">Créer</string>
    <string name="cancel">Annuler</string>
    <string name="activity_add_beacon">Ajouter une balise</string>
    <string name="activity_my_itineraries">Mes itinéraires</string>
    <string name="activity_beacons_list">Balises de l\'itinéraire</string>
    <string name="error">Erreur</string>
    <string name="itinerary_no_beacons">Cet itinéraire ne contient aucune balise !</string>
    <string name="invalid_coordinates">Format des coordonées invalide</string>
    <string name="launcher">Menu principal</string>
</resources>
