<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/activity_launcher"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/grey"
              android:orientation="vertical">

    <ImageView
            android:id="@+id/geoQuestLogo"
            android:layout_height="150dp"
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_view_hint"
            android:src="@drawable/logo"
            android:layout_marginTop="55dp"/>

    <Button
            android:text="@string/launcher_start_button"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:id="@+id/start_game_button"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"/>

    <Button
            android:text="@string/launcher_editor_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:id="@+id/edit_itinerary_button"
            android:background="@color/colorPrimary"/>

</LinearLayout>
