<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/activity_add_beacon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@color/grey">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/ic_menu_camera"
                    android:layout_weight="1"
                    android:id="@+id/beacon_take_hint_image"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:hint="@string/beacon_hint_string"
                    android:id="@+id/field_beacon_hint_string"
                    android:layout_weight="1"
                    android:textColor="@color/textWhite"
                    android:textColorHint="@color/textWhite"/>
        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/caption_beacon_coordinates"
                android:textColor="#FF5722"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/latitude"
                android:id="@+id/field_beacon_latitude"
                android:textColor="@color/textWhite"
                android:textColorHint="@color/textWhite"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/longitude"
                android:id="@+id/field_beacon_longitude"
                android:textColor="@color/textWhite"
                android:textColorHint="@color/textWhite"/>

        <Button
                android:text="@string/save_beacon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/beacon_save_button"
                android:background="#FF5722"/>
    </LinearLayout>
</RelativeLayout>
